--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <!--Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet"> 
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+
 </head>
 <body>
   <app-root></app-root>
